Fix team pic's, fix team-wrap, portfolio nav

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ header {
 }
 
 .row-greetings h2 {
-    font-size: 80px;
+    font-size: 60px;
     letter-spacing: 1px;
     line-height: 93px;
     color: #000;
@@ -107,7 +107,7 @@ header {
 }
 
 .about-info p {
-    width: 770px;
+    width: 70%;
     margin: 0 auto;
     font-size: 24px;
     letter-spacing: 1px;
@@ -174,6 +174,7 @@ header {
 .portfolio-item-list {
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .portfolio-item-list a {
@@ -299,12 +300,16 @@ header {
 
 .team-info {
     display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     padding-bottom: 110px;
 }
 
 .team-info img {
+    display: block;
     height: 230px;
     width: 230px;
+    margin: 0 auto;
     border-radius: 115px;
     background-color: #FFF;
     border: #FFF 3px solid;
@@ -473,6 +478,7 @@ input {
 footer {
     background-color: #34495E;
     height: 282px;
+    flex-wrap: wrap;
 }
 
 footer .logo {
